--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
+    "easy-peasy": "^6.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.12.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
